correcion en la parte de categories

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,7 +11,7 @@ import SideBar from "../components/SideBar.astro";
 export interface Props {
   title?: string;
   subTitle?: string;
-  bannerImage?: string;
+  bannerImage?: string | string[];
   slug?: string;
   titleGame?: string;
 }
