--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -123,7 +123,7 @@ const tagKeys = [...tags.keys()];
     </div>
   </div>
 
-  <!-- Tag card -->
+  <!-- Tag card
   <div class="rounded-3xl bg-[var(--card-color)] p-4 transition-all lg:hidden">
     <div class="mb-2 flex flex-row items-center space-x-2 pl-1.5">
       <span class="h-6 w-1 rounded-full bg-[var(--primary-color)]"></span>
@@ -158,7 +158,7 @@ const tagKeys = [...tags.keys()];
         )
       }
     </div>
-  </div>
+  </div> -->
 
   <!-- Site footer -->
   <footer>
