--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -46,11 +46,12 @@ const carouselAnimationTime = `${carouselImgsList.length * 6}s`;
         </div>
       ) : (
         <div class="cover">
-          <img
-            class="item lozad"
-            data-src={typeof bannerImage === "string" ? bannerImage : GetCoverURLForUnspecifiedEntry(slug ?? "")}
-            alt="PostCover"
-          />
+        <img
+          class="item lozad object-cover object-top h-auto w-auto"
+          data-src={typeof bannerImage === "string" ? bannerImage : GetCoverURLForUnspecifiedEntry(slug ?? "")}
+          alt="PostCover"
+        />
+
         </div>
       )
     }
