--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -120,9 +120,33 @@ const tagKeys = [...tags.keys()];
           </div>
         )
       }
+      
     </div>
   </div>
 
+
+  <!-- FAQ  -->
+<div class="rounded-3xl bg-[var(--card-color)] p-4 transition-all lg:hidden">
+  <div class="mb-2 flex flex-row items-center space-x-2 pl-1.5">
+    <span class="h-6 w-1 rounded-full bg-[var(--primary-color)]"></span>
+    <span class="text-xl font-semibold text-[var(--text-color)]">
+      Preguntas Frecuentes
+    </span>
+  </div>
+
+  <div class="relative flex flex-row flex-wrap">
+    <a
+      href="/faq/faq"
+      class="tag m-1 rounded-md bg-[var(--primary-color-lighten)] px-4 py-2 transition-all hover:brightness-95 w-full text-center"
+    >
+      <p class="text-sm font-semibold text-[var(--primary-color)]">
+        Ver FAQs
+      </p>
+    </a>
+  </div>
+</div>
+
+  
   <!-- Tag card
   <div class="rounded-3xl bg-[var(--card-color)] p-4 transition-all lg:hidden">
     <div class="mb-2 flex flex-row items-center space-x-2 pl-1.5">
