--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -25,7 +25,7 @@ const dynamicBannerImages = page.data
 
 ---
 
-<Main  title="Encuentra monedas, ítems y todo lo que necesitas para los mejores juegos móviles, solo en Sdepmone" subTitle="Explora lo más reciente" bannerImage={dynamicBannerImages}>
+<Main  title="Todo lo que necesitas para tus juegos móviles, solo en SdepMone" subTitle="Explora lo más reciente" bannerImage={dynamicBannerImages}>
   <div class="space-y-8">
     <div class="w-full space-y-4">
       {
