--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,7 +15,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{SdepMoneConfig.title}</title>
+<title>{"sdeepmone"}</title>
 <meta name="title" content={SdepMoneConfig.title} />
 <meta name="description" content={SdepMoneConfig.description} />
 
