cambio color de boton

--- a/src/layouts/PostArchiveLayout.astro
+++ b/src/layouts/PostArchiveLayout.astro
@@ -26,10 +26,10 @@ if (archiveMap.size !== 0) {
     for (const entry of entries) {
       if (entry.cover) {
         dynamicBannerImage = entry.cover;
-        break; // 🔥 Solo la primera imagen encontrada
+        break; 
       }
     }
-    if (dynamicBannerImage) break; // 🔥 Salir si ya la encontró
+    if (dynamicBannerImage) break; 
   }
 }
 ---
