--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -44,6 +44,31 @@ const tagKeys = [...tags.keys()];
         )
       }
     </div>
+      <!-- faq -->
+      <div
+        class="onload-animation space-y-2 rounded-3xl  p-3"
+        style="animation-delay: calc(var(--onload-animation-delay) + 2 * var(--onload-animation-interval));"
+      >
+        <div class="title m-[0.375rem]">
+          <a
+            href="/faq/faq"
+            class="pl-4 text-xl font-bold text-[var(--text-color)] transition-colors hover:text-[var(--primary-color)]"
+          >
+            Preguntas Frecuentes
+          </a>
+        </div>
+        <div class="relative flex max-w-[224px] flex-row flex-wrap  ">
+          <a
+            href="/faq/faq"
+            class="tag m-1 grow rounded-md bg-[var(--primary-color-lighten)] px-2 py-1 transition-all hover:brightness-95 bg-orange-500 hover:bg-orange-600 dark:bg-orange-500 dark:hover:bg-orange-600"
+          >
+            <p class="text-center text-sm text-white hover:text-white ">
+              Ver FAQs
+            </p>
+          </a>
+        </div>
+      </div>
+
 
     <!-- categories -->
     {
@@ -92,30 +117,7 @@ const tagKeys = [...tags.keys()];
       )
     }
 
-      <!-- faq -->
-      <div
-        class="onload-animation space-y-2 rounded-3xl bg-[var(--card-color)] p-3"
-        style="animation-delay: calc(var(--onload-animation-delay) + 2 * var(--onload-animation-interval));"
-      >
-        <div class="title m-[0.375rem]">
-          <a
-            href="/faq/faq"
-            class="pl-4 text-xl font-bold text-[var(--text-color)] transition-colors hover:text-[var(--primary-color)]"
-          >
-            Preguntas Frecuentes
-          </a>
-        </div>
-        <div class="relative flex max-w-[224px] flex-row flex-wrap">
-          <a
-            href="/faq/faq"
-            class="tag m-1 grow rounded-md bg-[var(--primary-color-lighten)] px-2 py-1 transition-all hover:brightness-95"
-          >
-            <p class="text-center text-sm text-[var(--primary-color)]">
-              Ver FAQs
-            </p>
-          </a>
-        </div>
-      </div>
+
 
       
     <!-- tags -->
