--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -46,7 +46,7 @@ const tagKeys = [...tags.keys()];
     </div>
       <!-- faq -->
       <div
-        class="onload-animation space-y-2 rounded-3xl  p-3"
+        class="onload-animation space-y-2 rounded-3xl bg-[var(--card-color)] p-3"
         style="animation-delay: calc(var(--onload-animation-delay) + 2 * var(--onload-animation-interval));"
       >
         <div class="title m-[0.375rem]">
