route of faqs and question, space paddings

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -124,7 +124,7 @@ const tagKeys = [...tags.keys()];
       >
         <div class="title m-[0.375rem]">
           <a
-            href="/faq/faq"
+            href="/term/term"
             class="pl-4 text-xl font-bold text-[var(--text-color)] transition-colors hover:text-[var(--primary-color)]"
           >
             Terminos y Condiciones
