cambio redes de tarjetas

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -35,7 +35,7 @@ const tagKeys = [...tags.keys()];
       {
         SdepMoneConfig.socialLinks.length > 0 && (
           <div class="mt-1 flex flex-row justify-center">
-            <div class="flex w-[184px] flex-wrap justify-center gap-2">
+            <div class="flex justify-center gap-3">
               {SdepMoneConfig.socialLinks.map((item) => (
                 <SocialIcon name={item.icon} link={item.link} />
               ))}
